--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@types/archiver": "^6.0.3",
+    "archiver": "^7.0.1",
     "geist": "^1.3.0",
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "zod": "^3.23.3"
   },
   "devDependencies": {
